--- a/src/shared/components/modal-dialog/modal-dialog.component.html
+++ b/src/shared/components/modal-dialog/modal-dialog.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>Add Product Form</h1>
-<form [formGroup]="productForm">
+<form [formGroup]="clientForm">
   <div mat-dialog-content>
     <mat-form-field class="example-full-width" appearance="outline">
       <mat-label>Nome</mat-label>
