--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,69 @@
-<navbar></navbar> <data-table></data-table>
+<navbar></navbar>
+<button-primary (click)="openDialog()">Open dialog</button-primary>
+<mat-form-field>
+  <mat-label>Filter</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input />
+</mat-form-field>
+
+<div class="container">
+  <div class="mat-elevation-z8" style="margin-top: 10px">
+    <table mat-table [dataSource]="dataSource" matSort>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
+        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="cpf">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Cpf</th>
+        <td mat-cell *matCellDef="let row">{{ row.cpf }}%</td>
+      </ng-container>
+
+      <ng-container matColumnDef="monthlyIncome">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Renda Mensal</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.monthlyIncome }}
+          <!-- {{ row.monthlyIncome | currency }} -->
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="birtDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Data de Nascimento
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.birtDate | date }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="dateRegister">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Data de Registro
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.dateRegister | date }}</td>
+      </ng-container>
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+
+        <td mat-cell *matCellDef="let row">
+          <button mat-icon-button color="primary" (click)="editProdut(row)">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button color="primary">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <!-- <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr> -->
+    </table>
+
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 25, 100]"
+      aria-label="Select page of users"
+    ></mat-paginator>
+  </div>
+</div>
