--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,3 +1,21 @@
-.mat-toolbar.mat-primary {
-  background-color: #002c37 !important;
+table {
+  width: 100%;
 }
+
+.mat-mdc-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
+mat-form-fied {
+  font-size: 14px;
+  width: 100%;
+}
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+// td,
+// th {
+//   width: 25%;
+// }
