--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,7 +17,10 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Cpf</th>
         <td mat-cell *matCellDef="let row">{{ row.cpf }}%</td>
       </ng-container>
-
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>E-mail</th>
+        <td mat-cell *matCellDef="let row">{{ row.email }}</td>
+      </ng-container>
       <ng-container matColumnDef="monthlyIncome">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Renda Mensal</th>
         <td mat-cell *matCellDef="let row">
@@ -39,6 +42,7 @@
         </th>
         <td mat-cell *matCellDef="let row">{{ row.dateRegister | date }}</td>
       </ng-container>
+
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
 
@@ -46,7 +50,11 @@
           <button mat-icon-button color="primary" (click)="editProdut(row)">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button color="primary">
+          <button
+            mat-icon-button
+            color="primary"
+            (click)="deleteClient(row.id)"
+          >
             <mat-icon>delete</mat-icon>
           </button>
         </td>
