--- a/src/shared/components/modal-dialog/modal-dialog.component.html
+++ b/src/shared/components/modal-dialog/modal-dialog.component.html
@@ -7,7 +7,12 @@
     </mat-form-field>
     <mat-form-field class="example-full-width" appearance="outline">
       <mat-label>CPF</mat-label>
-      <input matInput placeholder="cpf" formControlName="cpf" />
+      <input
+        matInput
+        placeholder="cpf"
+        formControlName="cpf"
+        mask="000.000.000-00"
+      />
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Data de Nascimento</mat-label>
@@ -17,16 +22,27 @@
         [for]="picker"
       ></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
+      <!-- <mat-error>Error</mat-error> -->
+      <mat-error *ngIf="clientForm.hasError('tooJung')"
+        >You are too jung!</mat-error
+      >
+      <mat-error *ngIf="clientForm.hasError('tooOld')"
+        >You are too old!</mat-error
+      >
     </mat-form-field>
     <mat-form-field class="example-full-width" appearance="outline">
       <mat-label>Renda Mensal</mat-label>
       <input matInput placeholder="name" formControlName="monthlyIncome" />
     </mat-form-field>
+    <mat-form-field class="example-full-width" appearance="outline">
+      <mat-label>E-mail</mat-label>
+      <input matInput placeholder="email" formControlName="email" />
+    </mat-form-field>
   </div>
 </form>
 <div mat-dialog-action [align]="'end'">
-  <button-primary (click)="closeDialog()">Close</button-primary>
-  <button-primary style="margin-left: 8px" (click)="save()"
-    >Save</button-primary
-  >
+  <button-primary (click)="closeDialog()">Fechar</button-primary>
+  <button-primary style="margin-left: 8px" (click)="save()">{{
+    btnAction
+  }}</button-primary>
 </div>
