--- a/src/shared/components/modal-dialog/modal-dialog.component.html
+++ b/src/shared/components/modal-dialog/modal-dialog.component.html
@@ -1,3 +1,4 @@
+<mat-toolbar class="navbar" color="primary"> </mat-toolbar>
 <h1 mat-dialog-title>Add Product Form</h1>
 <form [formGroup]="clientForm">
   <div mat-dialog-content>
