--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,50 +1,104 @@
 <navbar></navbar>
-<button-primary (click)="openDialog()">Open dialog</button-primary>
-<mat-form-field>
-  <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input />
-</mat-form-field>
 
 <div class="container">
-  <div class="mat-elevation-z8" style="margin-top: 10px">
+  <div class="menu">
+    <mat-form-field appearance="outline">
+      <mat-label>Buscar</mat-label>
+      <input matInput (keyup)="searchClient($event)" #input />
+    </mat-form-field>
+    <search-sgv class="menu__icon"></search-sgv>
+
+    <div>
+      <button-primary class="menu__button" (click)="openDialog()" [size]="'lg'"
+        >ADICIONAR</button-primary
+      >
+    </div>
+  </div>
+  <div class="mat-elevation-z0" style="margin-top: 10px">
     <table mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          [style.background-color]="color"
+          [style.border-radius]="radiusInit"
+        >
+          PLACA
+        </th>
         <td mat-cell *matCellDef="let row">{{ row.name }}</td>
       </ng-container>
 
       <ng-container matColumnDef="cpf">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Cpf</th>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          [style.background-color]="color"
+        >
+          CPF
+        </th>
         <td mat-cell *matCellDef="let row">{{ row.cpf }}%</td>
       </ng-container>
       <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>E-mail</th>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          [style.background-color]="color"
+        >
+          E-MAIL
+        </th>
         <td mat-cell *matCellDef="let row">{{ row.email }}</td>
       </ng-container>
       <ng-container matColumnDef="monthlyIncome">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Renda Mensal</th>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          [style.background-color]="color"
+        >
+          RENDA MENSAL
+        </th>
         <td mat-cell *matCellDef="let row">
           {{ row.monthlyIncome }}
-          <!-- {{ row.monthlyIncome | currency }} -->
         </td>
       </ng-container>
 
       <ng-container matColumnDef="birtDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Data de Nascimento
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          [style.background-color]="color"
+        >
+          DATA DE NASCIMENTO
         </th>
         <td mat-cell *matCellDef="let row">{{ row.birtDate | date }}</td>
       </ng-container>
 
       <ng-container matColumnDef="dateRegister">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Data de Registro
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          [style.background-color]="color"
+        >
+          DATA DE REGISTRO
         </th>
         <td mat-cell *matCellDef="let row">{{ row.dateRegister | date }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+      <ng-container matColumnDef="action" [style.background-color]="color">
+        <th
+          [style.border-radius]="radiusFinal"
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          [style.background-color]="color"
+        >
+          AÇÕES
+        </th>
 
         <td mat-cell *matCellDef="let row">
           <button mat-icon-button color="primary" (click)="editProdut(row)">
@@ -61,7 +115,11 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns; let i = index"
+        [class.line-row]="i % 2"
+      ></tr>
 
       <!-- Row shown when there is no matching data. -->
       <!-- <tr class="mat-row" *matNoDataRow>
