--- a/src/shared/components/button-primary/button-primary.component.html
+++ b/src/shared/components/button-primary/button-primary.component.html
@@ -1,1 +1,3 @@
-<button mat-raised-button color="primary"><ng-content></ng-content></button>
+<button mat-raised-button color="primary" [ngClass]="size">
+  <ng-content></ng-content>
+</button>
