--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @import "@angular/material/theming"; //notice that the file imported is also different
 @include mat-core();
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
 
 // define a real custom palette (using http://mcg.mbitson.com)
 $safra-primary: (
@@ -73,4 +74,8 @@ $bv-theme: mat-light-theme($bv-palette-primary, $safra-secondary);
 
 body {
   margin: 0px;
+}
+
+dialog {
+  border: 100px !important;
 }
