--- a/src/shared/components/modal-dialog/modal-dialog.component.scss
+++ b/src/shared/components/modal-dialog/modal-dialog.component.scss
@@ -4,3 +4,13 @@ mat-form-field {
 .mdc-dialog__container {
   border-radius: 1100px;
 }
+
+.button-close {
+  margin-right: 8px;
+}
+.button-save {
+  margin-right: 18px;
+}
+.modal-button {
+  margin-bottom: 18px;
+}
