--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,6 +74,7 @@ $bv-theme: mat-light-theme($bv-palette-primary, $safra-secondary);
 
 body {
   margin: 0px;
+  font-family: "Inter", sans-serif;
 }
 
 dialog {
