--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -14,19 +14,21 @@ mat-form-fied {
 .container {
   max-width: 1200px;
   margin: 0 auto;
+  text-transform: uppercase;
+  font-family: "Inter";
 }
 
 th.mat-sort-header {
   color: white;
-  font-family: "Inter";
+
   font-weight: 700;
-  font-size: 15px;
+  font-size: 12px;
   line-height: 15px;
 }
 
 td {
-  font-family: "Inter";
-  line-height: 15px;
+  // font-family: "Inter";
+  line-height: 10px;
   text-transform: uppercase;
 }
 tr {
@@ -64,7 +66,6 @@ th:last-child {
   }
 
   &__button {
-    // margin-bottom: 20px;
     margin-left: 48px;
   }
 }
