--- a/src/shared/components/button-primary/button-primary.component.html
+++ b/src/shared/components/button-primary/button-primary.component.html
@@ -1,3 +1,8 @@
-<button mat-raised-button color="primary" [ngClass]="size">
+<button
+  mat-raised-button
+  color="primary"
+  [ngClass]="size"
+  [disabled]="isDisabled"
+>
   <ng-content></ng-content>
 </button>
