save change button and home

--- a/src/shared/components/button-primary/button-primary.component.html
+++ b/src/shared/components/button-primary/button-primary.component.html
@@ -3,6 +3,7 @@
   color="primary"
   [ngClass]="size"
   [disabled]="isDisabled"
+  [disableRipple]="true"
 >
   <ng-content></ng-content>
 </button>
