--- a/src/shared/components/button-primary/button-primary.component.scss
+++ b/src/shared/components/button-primary/button-primary.component.scss
@@ -6,7 +6,6 @@
   }
   &:focus {
     background-color: #00586f;
-
     box-shadow: none;
   }
   &:active {
@@ -27,11 +26,10 @@
 }
 
 .lg {
-  width: 200px;
-  height: 60px;
   font-weight: 700;
   width: 153px;
   height: 40px;
+  font-size: 10px;
 }
 
 .full {
