--- a/src/shared/components/modal-dialog/modal-dialog.component.scss
+++ b/src/shared/components/modal-dialog/modal-dialog.component.scss
@@ -1,8 +1,6 @@
 mat-form-field {
   width: 100%;
-}
-.mdc-dialog__container {
-  border-radius: 1100px;
+  margin-bottom: 8px;
 }
 
 .button-close {
