--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,9 @@
 <navbar></navbar>
 
-<div class="container">
+<div class="data-table">
+  <div class="data-table__title">
+    <span>Cadastro de Clientes</span>
+  </div>
   <div class="menu">
     <mat-form-field appearance="outline">
       <mat-label>Buscar</mat-label>
