--- a/src/shared/components/button-primary/button-primary.component.html
+++ b/src/shared/components/button-primary/button-primary.component.html
@@ -4,6 +4,7 @@
   [ngClass]="size"
   [disabled]="isDisabled"
   [disableRipple]="true"
+  [color]="color"
 >
   <ng-content></ng-content>
 </button>
