--- a/src/shared/components/button-primary/button-primary.component.scss
+++ b/src/shared/components/button-primary/button-primary.component.scss
@@ -1,6 +1,8 @@
 .mat-mdc-raised-button {
   font-family: "Inter";
   border-radius: 20px;
+  color: #ffff;
+  font-weight: 700;
   &:hover {
     background-color: #11728b;
   }
@@ -20,13 +22,11 @@
 }
 
 .md {
-  font-weight: 700;
   font-size: 14px;
   line-height: 36px;
 }
 
 .lg {
-  font-weight: 700;
   width: 153px;
   height: 40px;
   font-size: 10px;
@@ -34,7 +34,7 @@
 
 .full {
   height: 56px;
-  font-weight: 700;
+
   font-size: 16px;
   width: 100%;
 }
