--- a/src/shared/styles/_variables.scss
+++ b/src/shared/styles/_variables.scss
@@ -1,2 +1,5 @@
 $color-navbar: #002c37;
 $color-brand-primary-dark: #0a4a5b;
+$color-brand-primary-medium: #00586f;
+$color-brand-primary-light: #11728b;
+$color-brand-background-color: #053542;
