--- a/src/shared/components/modal-dialog-sucess-or-error/modal-dialog-sucess-or-error.component.scss
+++ b/src/shared/components/modal-dialog-sucess-or-error/modal-dialog-sucess-or-error.component.scss
@@ -1,3 +1,5 @@
+@import "src/shared/styles/_variables.scss";
+
 .modal-sucess-error {
   margin-top: 50px;
   display: flex;
@@ -6,7 +8,7 @@
   span {
     font-weight: 700;
     font-size: 12px;
-    color: #00586f;
+    color: $color-brand-primary-medium;
     font-family: "Inter";
   }
 
