replace name logo

--- a/src/shared/components/navbar/navbar.component.html
+++ b/src/shared/components/navbar/navbar.component.html
@@ -5,6 +5,6 @@
 
   <span class="example-spacer"></span>
   <div class="logo">
-    <logo-safra></logo-safra>
+    <logo-bank></logo-bank>
   </div>
 </mat-toolbar>
