--- a/src/shared/components/modal-dialog/modal-dialog.component.scss
+++ b/src/shared/components/modal-dialog/modal-dialog.component.scss
@@ -3,6 +3,11 @@ mat-form-field {
   margin-bottom: 8px;
 }
 
+mat-error {
+  font-size: 10px;
+  margin-top: -8px;
+}
+
 .button-close {
   margin-right: 8px;
 }
