--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -37,7 +37,7 @@ tr {
 }
 
 .line-row {
-  background-color: #f7f7f7;
+  background-color: #f7f7f7 !important;
 }
 
 td:first-child,
@@ -73,4 +73,8 @@ span {
   &__button {
     margin-left: 48px;
   }
+}
+
+::ng-deep .mat-sort-header-arrow {
+  color: #fff;
 }
