--- a/src/shared/components/button-primary/button-primary.component.scss
+++ b/src/shared/components/button-primary/button-primary.component.scss
@@ -2,7 +2,7 @@
 .mat-mdc-raised-button {
   font-family: "Inter";
   border-radius: 20px;
-  color: #ffff;
+  color: $color-brand-background-write;
   font-weight: 700;
   &:hover {
     background-color: $color-brand-primary-light;
@@ -35,7 +35,6 @@
 
 .full {
   height: 56px;
-
   font-size: 16px;
   width: 100%;
 }
