--- a/src/shared/styles/_variables.scss
+++ b/src/shared/styles/_variables.scss
@@ -3,3 +3,4 @@ $color-brand-primary-dark: #0a4a5b;
 $color-brand-primary-medium: #00586f;
 $color-brand-primary-light: #11728b;
 $color-brand-background-color: #053542;
+$color-brand-background-write: #ffff;
