add custom material in styles css

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,72 +1,5 @@
-@import "@angular/material/theming"; //notice that the file imported is also different
-@include mat-core();
+@import "./shared/styles/custom-theme.scss";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
-
-// define a real custom palette (using http://mcg.mbitson.com)
-$bank-primary: (
-  50: #0a4a5b,
-  100: #0a4a5b,
-  200: #0a4a5b,
-  300: #54808c,
-  400: #2f6574,
-  500: #0a4a5b,
-  600: #094353,
-  700: #073a49,
-  800: #053240,
-  900: #03222f,
-  A100: #68cbff,
-  A200: #35b9ff,
-  A400: #02a8ff,
-  A700: #0098e7,
-  contrast: (
-    50: #000000,
-    100: #000000,
-    200: #000000,
-    A100: #000000,
-    A200: #000000,
-    A400: #000000,
-  ),
-);
-
-$bank-secondary: (
-  50: #eefaea,
-  100: #d5f3cb,
-  200: #b9eca9,
-  300: #9de486,
-  400: #88de6c,
-  500: #73d852,
-  600: #6bd44b,
-  700: #60ce41,
-  800: #56c838,
-  900: #43bf28,
-  A100: #fefffd,
-  A200: #d3ffca,
-  A400: #a8ff97,
-  A700: #92ff7e,
-  contrast: (
-    50: #000000,
-    100: #000000,
-    200: #000000,
-    300: #000000,
-    400: #000000,
-    500: #000000,
-    600: #000000,
-    700: #000000,
-    800: #000000,
-    900: #000000,
-    A100: #000000,
-    A200: #000000,
-    A400: #000000,
-    A700: #000000,
-  ),
-);
-
-$bv-palette-primary: mat-palette($bank-primary);
-$bank-secondary: mat-palette($bank-secondary);
-
-$bv-theme: mat-light-theme($bv-palette-primary, $bank-secondary);
-
-@include angular-material-theme($bv-theme);
 
 body {
   margin: 0px;
