--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -127,6 +127,11 @@
         *matRowDef="let row; columns: displayedColumns; let i = index"
         [class.line-row]="i % 2"
       ></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4" class="data-filter">
+          NENHUM DADO CORRESPONDE AO FILTRO {{ input.value }}"
+        </td>
+      </tr>
     </table>
 
     <mat-paginator
