--- a/src/shared/styles/_variables.scss
+++ b/src/shared/styles/_variables.scss
@@ -4,3 +4,93 @@ $color-brand-primary-medium: #00586f;
 $color-brand-primary-light: #11728b;
 $color-brand-background-color: #053542;
 $color-brand-background-write: #ffff;
+$bank-primary: (
+  50: #0a4a5b,
+  100: #0a4a5b,
+  200: #0a4a5b,
+  300: #54808c,
+  400: #2f6574,
+  500: #0a4a5b,
+  600: #094353,
+  700: #073a49,
+  800: #053240,
+  900: #03222f,
+  A100: #68cbff,
+  A200: #35b9ff,
+  A400: #02a8ff,
+  A700: #0098e7,
+  contrast: (
+    50: #000000,
+    100: #000000,
+    200: #000000,
+    A100: #000000,
+    A200: #000000,
+    A400: #000000,
+  ),
+);
+
+$bank-secondary: (
+  50: #eefaea,
+  100: #d5f3cb,
+  200: #b9eca9,
+  300: #9de486,
+  400: #88de6c,
+  500: #73d852,
+  600: #6bd44b,
+  700: #60ce41,
+  800: #56c838,
+  900: #43bf28,
+  A100: #fefffd,
+  A200: #d3ffca,
+  A400: #a8ff97,
+  A700: #92ff7e,
+  contrast: (
+    50: #000000,
+    100: #000000,
+    200: #000000,
+    300: #000000,
+    400: #000000,
+    500: #000000,
+    600: #000000,
+    700: #000000,
+    800: #000000,
+    900: #000000,
+    A100: #000000,
+    A200: #000000,
+    A400: #000000,
+    A700: #000000,
+  ),
+);
+
+$bank-tertiary: (
+  50: #e1eaec,
+  100: #b5cbcf,
+  200: #83a8b0,
+  300: #518590,
+  400: #2c6a78,
+  500: #075060,
+  600: #064958,
+  700: #05404e,
+  800: #043744,
+  900: #022733,
+  A100: #6bd2ff,
+  A200: #38c2ff,
+  A400: #05b3ff,
+  A700: #00a3eb,
+  contrast: (
+    50: #000000,
+    100: #000000,
+    200: #000000,
+    300: #ffffff,
+    400: #ffffff,
+    500: #ffffff,
+    600: #ffffff,
+    700: #ffffff,
+    800: #ffffff,
+    900: #ffffff,
+    A100: #000000,
+    A200: #000000,
+    A400: #000000,
+    A700: #ffffff,
+  ),
+);
