--- a/src/shared/components/modal-dialog-sucess-or-error/modal-dialog-sucess-or-error.component.html
+++ b/src/shared/components/modal-dialog-sucess-or-error/modal-dialog-sucess-or-error.component.html
@@ -3,7 +3,9 @@
     <icon-sucess
       class="modal-sucess-error__logo"
       *ngIf="
-        messagemSucessOrError === 'sucess' || messagemSucessOrError === 'delete'
+        messagemSucessOrError === 'sucess' ||
+        messagemSucessOrError === 'delete' ||
+        messagemSucessOrError === 'edit'
       "
     ></icon-sucess>
     <icon-error
